# gum-protocol

./: Anchor.toml  Cargo.toml  README.md  REVIVAL.md  gpl_core.json  gpl_nameservice.json  package-lock.json
programs/gpl_compression/: Cargo.toml
programs/gpl_core/: Cargo.toml
programs/gpl_core/src/: lib.rs
programs/gpl_core/src/instructions/: badge.rs  post.rs  profile.rs
programs/gpl_nameservice/: Cargo.toml
programs/gpl_nameservice/src/nameservice/: ans.rs  mod.rs  sns.rs
programs/gpl_session/macros/attribute/src/: lib.rs
programs/gpl_session/src/: lib.rs
revival-tests/: gum.test.js  package-lock.json  package.json
