[workspace]
members = [
    "programs/*",
    "programs/gpl_session/macros",
    "programs/gpl_session/macros/attribute",
]

[workspace.dependencies]
solana-program = "~1.16"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
